--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<title>Detect Internet connection</title>
-	<!-- Created by S-Tech04 | www.youtube.com/c/STech04 -->
+	<!-- By Elvin Kyungu front-end web developer -->
 </head>
 <body>
 	<div class="connections">
@@ -24,46 +24,6 @@
 		</div>
 	</div>
 
-	<script>
-		const offlineConnection = document.querySelector('.offline')
-		const onlineConnection = document.querySelector('.online')
-		const closeBtn = document.querySelectorAll('.close')
-		const refreshBtn = document.querySelector('.refreshBtn')
-
-		function online() {
-			offlineConnection.classList.remove('active')
-			onlineConnection.classList.add('active')
-		}
-		function offline() {
-			offlineConnection.classList.add('active')
-			onlineConnection.classList.remove('active')
-		}
-		
-		window.addEventListener('online',()=>{
-			online();
-			setTimeout(() => {
-				onlineConnection.classList.remove('active')
-			}, 5000);
-		})
-		online();
-		window.addEventListener('offline',()=>{
-			offline();
-		})
-
-		for (let i = 0; i < closeBtn.length; i++) {
-			closeBtn[i].addEventListener('click',()=>{
-				closeBtn[i].parentNode.classList.remove('active');
-				if (closeBtn[i].parentNode.classList.contains('offline')) {
-					setTimeout(() => {
-						closeBtn[i].parentNode.classList.add('active');
-					}, 500);
-				}
-			})
-		}
-
-		refreshBtn.addEventListener("click",()=>{
-			window.location.reload();
-		})
-	</script>
+	<script src="index.js"></script>
 </body>
 </html>
